# rdma_shuffle

./: README.md  exp.py  main.cpp  meson.build  native_cluster.ini  start_client.sh  start_server.sh
src/: cli_parser.cpp  cli_parser.hpp  comm_helper.hpp  config.hpp  meson.build  shuffle.cpp  shuffle.hpp  threadpool.hpp  types.hpp  utils.hpp
subprojects/: librdmapp.wrap
tests/: basic_1.cpp  basic_2.cpp  basic_3.cpp  meson.build
